# gremlin

./: .gitignore  CHANGELOG  LICENSE  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
examples/MNIST/: MNIST_config.yml  MNIST_example.py  README.md  async.yml  config.yml  config_debug.yml  debug.yml  distributed.yml  example.py  individual.py  probe.py  problem.py  pytorch_lenet.py  pytorch_net.py  representation.py  run.sh  train.py
examples/MNIST/config/: README.md  async.yml  broken.yml  bygen-dist.yml  bygen.yml  common.yml  debug.yml  distributed.yml
gremlin/: __version__.py  analysis.py  future.py  gremlin.py  problem.py
tests/: test_generator.py
