[metadata]
name = gremlin
version = attr: gremlin:__version__.__version__
description = Adversarial evolutionary algorithm for training data optimization
long_description = file: README.md
scripts = gremlin/gremlin.py
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.7
